--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ text-decoration: wavy;
     color: #002f34;
     font-size: 24px;
     margin-top: 15px;
-    text-indent:1.4cm;
+    text-indent:1.8cm;
 }
 #card-align{
 
@@ -147,8 +147,9 @@ border: 1px solid rgb(201, 201, 201) !important;
 box-shadow: 0px 0px 1px grey !important;
 }
 .card:hover{
-box-shadow: 0px 0px 3px grey !important;
+box-shadow: 0px 0px 1px rgb(226, 226, 226) !important;
 }
+
 .heart{
     width: 24px;
     height: 24px;
@@ -156,9 +157,20 @@ box-shadow: 0px 0px 3px grey !important;
     right: 10px;
     top: 9px;
 }
+.heart:hover{
+    width: 27px;
+    height: 27px;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+
+
+}
 
 #card-body{
- border-left: 5px solid #ffce32;   
+ border-left: 5px solid #ffce32;  
+ overflow: hidden !important;
+
 }
 
 #white-border{
@@ -171,6 +183,9 @@ box-shadow: 0px 0px 3px grey !important;
     /* padding: 5 !important; */
     /* width: 90% !important; */
 }
+.card-img-top:hover{
+    /* box-shadow: 0px 0px 3px grey !important; */
+    }
 .items-img{
 
 }
@@ -188,6 +203,12 @@ box-shadow: 0px 0px 3px grey !important;
   top: 9px;
   color: #002f34;
 }
+#featured:hover{
+    font-size: 11px;
+    position: absolute;
+    left: 7px;
+    top: 8px;
+}   
 .ul-for-card>li{
     /* list-style: none; */
     float: left;
@@ -197,13 +218,15 @@ box-shadow: 0px 0px 3px grey !important;
 }
 .c-title{
     font-weight: 700;
-    margin-bottom: 0;
-    overflow: hidden;
+    /* margin-bottom: 0; */
+    overflow: hidden !important;
     color: #002f34;
     font-size: 20px;
+    margin-top: -15px !important;
+
     
 }
-.locqtion,.date{
+.location,.date{
     color: rgba(0,47,52,.64) !important;
     margin-bottom: -15px !important;
     font-size: 10px;
@@ -213,11 +236,19 @@ box-shadow: 0px 0px 3px grey !important;
     color: rgba(0,47,52,.64) !important;
     font-size: 14px !important;
     font-weight: 400;
-    overflow: hidden;
+    overflow-x: hidden !important;
+    
     text-align: left;
     display: block;
-    margin-top: -12px !important;
-    /* padding-bottom: 10px !important; */
+    margin-top: -8px !important;
+    
+    padding-bottom: 10px !important;
+
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.c-title:hover,.c-text:hover,.location:hover,.date:hover{
+/* text-shadow: 1px 1px 2px rgb(204, 204, 204); */
 }
 
 
@@ -227,8 +258,7 @@ box-shadow: 0px 0px 3px grey !important;
 
 
 
-
-/* Load Mmore */
+/* Load More */
 .loadmore-main{
     text-align: center;
 }
@@ -252,7 +282,7 @@ box-shadow: 0px 0px 3px grey !important;
 
 }
 
-.loadmore:focus{
+.loadmore:active{
     background-color: rgb(214, 214, 214);
     color: white;
     border: 5px solid rgb(214, 214, 214);
@@ -283,28 +313,34 @@ box-shadow: 0px 0px 3px grey !important;
     line-height: 24px;
     color: #002f34;
     text-align: left;
-    text-size-adjust: 100%;
     margin-bottom: 10px;
 
 }
-.sec-1st-head,.sec-2nd-head,.sec-3rd-head{
-    margin: 0 auto;
+
+.col-md-3{
+ margin-right: 0px !important;   
 }
+
 .sec-1st-head{
-    position: absolute;
-    left: 80px;
+    /* position: ; */
+    left: 70px;
 }
 
 
 .sec-2nd-head{
-    position: absolute;
-    left: -50px;
+    /* position: relative !important; */
+    left: -60px !important;
+}
+.sec-3rd-head {
+    right: -10px !important;
 }
 
 .vl {
     border-left: 2px solid rgba(0,47,52,.2);
     height: 136px;
     margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 15px;
   }
 
 .sec-3rd{
@@ -314,6 +350,8 @@ box-shadow: 0px 0px 3px grey !important;
     font-weight: 700;
     margin-bottom: 10px !important;
 }
+
+
 
 
 
