--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
+
 .head{
 background-color: #f7f8f8;
 padding-top: 10px;
 padding-bottom: 5px;
 text-align: center;
 width: 100% !important;
-
+border-bottom: 1px solid #e9e9e9;
 }
+
 #logo{
 width: 50px;
 padding-top: 8px;
@@ -108,11 +110,11 @@ width: 100% !important;
 
 /* Categories */
 .categories{
+margin-top: 70px;
 border-top: 0.1px solid rgb(240, 240, 240);
 box-shadow: gray;
 text-indent: 0.6cm;
 border-bottom: 1px solid rgb(212, 212, 212);
-
 }
 
 .categories>button{
@@ -151,15 +153,16 @@ text-decoration: wavy;
     margin-top: 15px;
     text-indent:1.8cm;
 }
-#card-align{
+/* #card-align{
 
-}
+} */
+
 .card{
 border: 1px solid rgb(201, 201, 201) !important;
 box-shadow: 0px 0px 1px grey !important;
 }
 .card:hover{
-box-shadow: 0px 0px 1px rgb(226, 226, 226) !important;
+box-shadow: 0px 0px 10px rgb(187, 187, 187) !important;
 }
 
 .heart{
@@ -195,15 +198,16 @@ box-shadow: 0px 0px 1px rgb(226, 226, 226) !important;
     /* padding: 5 !important; */
     /* width: 90% !important; */
 }
-.card-img-top:hover{
-    /* box-shadow: 0px 0px 3px grey !important; */
-    }
-.items-img{
+/* .card-img-top:hover{
+box-shadow: 0px 0px 3px grey !important;
+} */ 
 
-}
-.cccc{
+/* .items-img{
+} */
 
-}
+ /* .cccc{ 
+ } */ 
+
 #featured{
   background-color: #ffce32;  
   font-size: 10px;
@@ -259,9 +263,9 @@ box-shadow: 0px 0px 1px rgb(226, 226, 226) !important;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.c-title:hover,.c-text:hover,.location:hover,.date:hover{
-/* text-shadow: 1px 1px 2px rgb(204, 204, 204); */
-}
+/* .c-title:hover,.c-text:hover,.location:hover,.date:hover{
+text-shadow: 1px 1px 2px rgb(204, 204, 204);
+} */ 
 
 
 
@@ -398,10 +402,10 @@ color: rgb(26, 25, 25) !important;
 text-decoration: none;
 }
 
-.ul-img>li{
-/* text-align: left; */
+/* .ul-img>li{
+text-align: left;
+}  */
 
-}
 .svgicon{
 height: 22px;
 margin-left: 5px;
@@ -451,6 +455,10 @@ font-size: 12px;
 .center>img{
     height: 150px !important;
  }
+#h1{
+    text-shadow: 1px 1px 2px #d4d4d4 !important; 
+
+}
 
  h1{
     text-align: center;
@@ -459,7 +467,7 @@ font-size: 12px;
     text-transform: uppercase;
     /* font-size: 2em; */
     font-weight: bold;   
-     color: #002f34;   
+     color: #002f34;  
 
  }
 
@@ -539,3 +547,188 @@ box-shadow: 0px 0px 5px grey;
     height: 24px;
     margin:7px  
    }
+
+
+
+   /* ITEMS DETAILS */
+
+   .image-container{
+     cursor: pointer;
+     position: absolute;
+     height: 100%;
+     object-fit: contain;
+     width: 100%;
+     margin: 0;
+     padding: 0;
+     height: 480px;
+     cursor: pointer;
+     display: block;
+     justify-content: center;
+     align-items: center;
+     overflow: hidden;
+     flex-direction: row;
+
+     font-weight: 400;
+     font-style: normal;
+     font-stretch: normal;
+     font-size: 14px;
+     line-height: 20px;
+     color: rgba(0,47,52,.36);
+   }
+
+
+   .card-price{
+    padding-top: 15px;
+    direction: ltr;
+    font-weight: 700;
+    margin-bottom: 8px;
+    color: #002f34;
+    font-size: 34px;
+    line-height: 32px;
+   }
+
+   .card-details{
+    margin: 8px 0;
+    font-size: 16px;
+    color: #002f34;
+    padding: 0px 10px 24px 0px;
+    font-weight: 450;
+
+    line-height: 20px;
+   }
+
+   
+   .card-location{
+    font-size: 12px;
+    color: rgba(0,47,52,.64);
+    display: flex;
+    margin-top: 24px;
+    margin-bottom: 10px;
+
+   }
+
+   .card-date{
+    font-size: 12px;
+    color: rgba(0,47,52,.64);
+    display: flex;
+    margin-top: 24px;
+    margin-bottom: 10px;
+   }
+   .Seller-Description{
+    padding-top: 15px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #002f34;
+}
+#user-img{
+ height: 54px;   
+ margin-top: 8px;
+ margin-left: 18px;
+}
+.seller-name{
+    font-weight: 500;
+    font-size: 17px;
+    color: #002f34;
+    display: block;
+    padding-top: 13px;
+    padding-left: 9px;
+    text-transform: capitalize;
+    font-weight: 700;
+    cursor: pointer;
+}
+.Chat-With-Seller{
+width: 100%;
+background-color: #002f34 !important;
+color: #ffffff;
+font-weight: 600 !important;
+
+}
+.Member-Since-November{
+    padding-top: 35px;
+    margin-left: -105px;
+    font-size: 12px;
+    color: #002f34;
+}
+
+.card-description{
+    padding-top: 16px;
+
+    font-weight: 700;
+    font-size: 20px;
+    color: #002f34;
+}
+
+
+.card-heart{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: 15px;
+    top: 18px;
+    cursor: pointer;
+}
+.card-heart:hover{
+    width: 27px;
+    height: 28px;
+    position: absolute;
+    right: 15px;
+    top: 16px;
+
+
+}
+
+
+#card-featured{
+    background-color: #ffce32;  
+    font-size: 13px;
+    padding: 2px 5px;
+    font-weight: 700;
+    display: block;
+    position: absolute;
+    left: 17px;
+    top: 15px;
+    color: #002f34;
+  }
+  #card-featured:hover{
+      font-size: 14px;
+      position: absolute;
+      left: 16px;
+      top: 15px;
+  }  
+.text-center{
+   text-align: center !important; 
+   margin-left: 100px;
+}
+  #phone{
+    height: 29px;  
+    padding-left: 100px;
+    margin-top: 4px;
+  }
+  .card-border{
+      border: 1px solid #b9b9b9; 
+     border-radius:5px ;
+     box-shadow: 0px 0px 2px grey;
+  }
+
+#phone-number{
+    font-size: 20px;
+    color: #002f34;
+    font-weight: 700;
+    padding-left: 10px;
+
+}
+.margin{
+    margin-left: -5px;
+
+
+}
+.for-margin{
+    padding-left:20px ;
+
+
+}
+
+.des{
+    margin-left: -5px;
+    margin-top: 20px;
+}
