--- a/src/App.css
+++ b/src/App.css
@@ -155,9 +155,10 @@ text-decoration: wavy;
     margin-top: 15px;
     text-indent:1.8cm;
 }
-/* #card-align{
 
-} */
+/* #card-align{
+} 
+ */
 
 .card{
 border: 1px solid rgb(201, 201, 201) !important;
