--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@ text-decoration: wavy;
 .card{
 border: 1px solid rgb(201, 201, 201) !important;
 box-shadow: 0px 0px 1px grey !important;
+width: 18rem;
 }
 .card:hover{
 box-shadow: 0px 0px 10px rgb(187, 187, 187) !important;
@@ -318,8 +319,9 @@ text-shadow: 1px 1px 2px rgb(204, 204, 204);
 /* Footer Top*/
 #foottop{
     background-color:#f3f6f7;
-    width: 100%;
-    overflow-x: hidden !important;
+    display: flex;
+    flex-wrap: wrap;
+    /* padding-bottom: 10px; */
 }
 
 .i-f{
@@ -340,46 +342,32 @@ text-shadow: 1px 1px 2px rgb(204, 204, 204);
     line-height: 24px;
     color: #002f34;
     text-align: left;
-    margin-bottom: 10px;
-
 }
 
-.col-md-3{
- margin-right: 0px !important;   
-}
-
-.sec-1st-head{
-    /* position: ; */
-    left: 70px;
-}
-
-
-.sec-2nd-head{
-    /* position: relative !important; */
-    left: -60px !important;
-}
-.sec-3rd-head {
-    right: -10px !important;
+.sec-1st-head>div>.img{
+    width: 100%;
+    height: 100%;
+    resize: cover;
 }
 
 .vl {
     border-left: 2px solid rgba(0,47,52,.2);
-    height: 136px;
-    margin-top: 30px;
-    margin-left: 20px;
-    margin-right: 15px;
+    padding-left: 10px;
+    margin-bottom: 60px;
   }
-
+  
+.sec-3rd-head{
+  padding-top: 50px;
+  }
 .sec-3rd{
     font-size: 14px;
     line-height: 10px;
     color: #002f34;
     font-weight: 700;
-    margin-bottom: 10px !important;
+  margin-top: 50px;
+
+  
 }
-
-
-
 
 
 /* Footer */
@@ -526,9 +514,11 @@ border-bottom: 1px solid rgb(216, 216, 216);
 /* SIGNIN  SIGNUP */
 
 #pos-ads{
+    width: 100%;
     height: 200px !important;
 margin-right: 10px;
 cursor: pointer;
+object-fit:contain;
 }
 
 #login-signup{
@@ -827,10 +817,298 @@ padding-left:15px ;
   .fullscreen img{
     /* object-fit: contain    !important; */
 }
+
+.spins{
+    height: 400px !important;
+    justify-content:center;
+    align-items: center;
+}
+.spins>div{
+    width: 3rem !important;
+    /* margin: auto; */
+    height: 3rem!important;
+    color:#002f34 !important;
+    background-color: #002f34 !important;
+
+}
+
 @media screen and (min-width: 1000px) {
     /* .image-gallery{
         width: 100% !important;
         height: auto !important;
         max-height: 67.5vh !important;
     } */
+  }
+
+
+  
+@media screen and (min-device-width: 0px) and (max-device-width: 765px) { 
+    .head{
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+        }
+        
+        #logo{
+        width: 50px;
+        padding-top: 0px;
+        margin-left: 0px;
+        }
+        
+        .head>div>div{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content:center;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-top: 2px;
+    }
+        
+
+        .Header__Select_Outlined>option{
+            font-size: 13px;
+        }
+        
+        .Header__Location{
+            background-color: white;
+            border-color: black;
+            border:2px solid black;
+            border-radius: 5px;
+            height: 50px;
+        }
+        #mag{
+        height: 30px;
+        cursor: pointer;
+        }
+        
+        .Header__Search{
+            background-color: white;
+            border:2px solid black !important;
+            border-radius: 5px;
+            height: 50px;
+            padding-right: 0px !important;
+        }
+        .Header__MagnifierSearch:focus{
+            background-color: white;
+        }
+        .Header__MagnifierSearch{
+            background-color: black;
+            height: 100%;
+            width: 55px;
+            padding: 8px;
+            font-size:15px;
+            cursor: pointer;
+        }
+   
+        
+        
+        #login{
+        padding-top: 0px;
+        font-size: 20px ;
+        }
+        
+        #sell-img{
+        width: 100px;
+        margin-top: 0px;
+        padding-top: 0px;
+        margin-left: -0px;
+        font-size:20px !important;
+        }
+        
+        
+        
+
+
+    /* OLX SLIDER */
+    .olxslide>img{
+    text-align: center !important;
+    width: 100% !important;
+    height: 100px;
+    }
+    
+    
+    /* Categories */
+    .categories{
+    margin-top: 250px;
+    text-indent: 0.0cm;
+    }
+    
+    .categories>a{
+    display: inline;
+    font-size: 13px;
+    padding-left: 0px;
+    margin: 5px;
+
+    }
+
+ /* ITEMS */
+    #items{
+         font-size: 16px;
+        text-indent:0cm;
+    }
+
+    .card{
+        width: 9.8rem !important;
+        margin-right: 7px;
+    } 
+
+    .heart{
+        width: 15px;
+        height: 15px;
+    }
+    .heart:hover{
+        width: 20px;
+        height: 20px;    
+    }
+    
+    #card-body{
+     border-left: 3px solid #ffce32;  
+    }
+    
+    #white-border{
+        margin: 4px;
+    }
+    .card-img-top{
+        height: 100px;
+        text-align: center !important;
+    }
+    #featured{
+      background-color: #ffce32;  
+      font-size: 8px;
+      padding: 2px 3px;
+      font-weight: 600;
+      left: 5px;
+      top: 5px;
+  
+    }
+    #featured:hover{
+        font-size: 10px;
+        position: absolute;
+        left: 6px;
+        top: 7px;
+    }   
+    .ul-for-card{
+        padding-left: 0px;
+    }
+    .ul-for-card>li{
+        margin-left: 0px;
+        margin-bottom: 10px;
+    }
+    .c-title{
+        font-weight: 700;
+        font-size: 16px;
+    }
+    .location,.date{
+        margin-bottom: -19px !important;
+        font-size: 9px;
+    }
+    .c-text{
+        color: rgba(0,47,52,.64) !important;
+        font-size: 11px !important;
+        font-weight: 400;
+        margin-top: -8px !important;
+        padding-bottom: 10px !important;
+    }
+
+    
+    
+/* Load More */
+
+.loadmore{
+    padding: 0 8px;
+    font-size: 15px;
+    height: 40px;
+
+}
+.loadmore:hover{
+    height: 43px;
+}
+
+
+/* Footer Top*/
+.sec-2nd{
+    font-size: 20px;
+    line-height: 2px;
+    font-weight: 700;
+}
+.sec-2nd-b{
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 2px;
+}
+
+.vl {
+    border-left: 2px solid rgba(0,47,52,.2);
+    height: 100px;
+  }
+
+.sec-3rd{
+    font-size: 14px;
+    line-height: 10px;
+}
+
+
+
+/* SIGNIN  SIGNUP */
+#pos-ads{
+    width: 100%;
+    margin-right: 0px;
+    object-fit:contain;
+}
+
+#login-signup{
+    text-align: center !important;
+    margin-top:10px;
+    width:70% !important;
+    border-radius:5px;
+}
+
+
+
+
+
+ /* ITEMS DETAILS */
+
+.image-container{
+    height: 100%;
+    object-fit: contain;
+    width: 100%;
+    height: 480px;
+    margin-bottom: 20px;
+} 
+  .card-price{
+   margin-bottom: 5px;
+   font-size: 30px;
+  }
+ .card-border{
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+ }
+
+.for-margin{
+    padding-left:0px ;
+    padding-right:0px;
+}
+
+
+
+
+
+
+
+/* FILTER */
+
+#filter{
+border: 2px solid #e9e9e9;
+height: 100% !important;
+}
+#filter>h3{
+font-size: 16px;
+}
+#filter>div{
+padding-left: 0px !important;
+padding-right: 0px !important;
+}
+
+
   }
